02_code1/grade.txt
Grading at Wed Aug 26 07:24:04 UTC 2020
Checking code1.c for legal syntax
temp.c: In function ‘max’:
temp.c:14:2: error: ISO C forbids nested functions [-Werror=pedantic]
  int main(void)
  ^
temp.c:14:6: error: ‘main’ is normally a non-static function [-Werror=main]
  int main(void)
      ^
cc1: all warnings being treated as errors
The code did not have legal syntax!

Overall Grade: F
